--- a/views/coursesIIT&Medical.ejs
+++ b/views/coursesIIT&Medical.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="stylesheets/coursesNEET.css" />
+    <link rel="stylesheet" href="stylesheets/coursesIIT&Medical.css" />
     <title>CoursesIIT & Medical</title>
   </head>
   <body>
@@ -44,7 +44,7 @@
       <span class="h1andh2">
         <h1 class="headh1h2"><b>COURSES</b></h1>
         <h2 class="headh1h2"><b>IIT & Medical</b></h2>
-        <a class="button" id="button" href="" target="">
+        <a class="button" id="button" href="/contactus" target="">
 					<span></span>
 					<span></span>
 					<span></span>
@@ -60,7 +60,7 @@
       <div class="hex1 bg1">
         <img src="../images/courses/heximg1.png" alt="" />
         <div class="hexBox">
-          <h1 class="hexTitle">6TH STD</h1>
+          <h1 class="hexTitle">STUDENTS</h1>
           <p class="hexContent">
             CLASSIC NEET ACADEMY offers a unique IIT/Medical Foundation program aimed at students of the 6th, 7th, 8th, 9th and 10th classes.
 This program focuses on strengthening the students conceptual clarity of the fundamentals in Mathematics, Physics, Chemistry, Biology, Logical Reasoning & Communication Skills.
@@ -70,7 +70,7 @@ This program focuses on strengthening the students conceptual clarity of the fun
         </div>
       </div>
     </section>
-    <section class="hexMain">
+    <!-- <section class="hexMain">
       <div class="hex1 hex2 bg2">
         <img src="../images/courses/heximg11.png" alt="" />
         <div class="hexBox hexBox2">
@@ -121,7 +121,7 @@ This program focuses on strengthening the students conceptual clarity of the fun
           <button class="neet5btn">Read more</button>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <a href="/contactus"><button class="enroll">Enroll Now!</button></a>
 
