--- a/views/coursesNEET.ejs
+++ b/views/coursesNEET.ejs
@@ -193,7 +193,7 @@
       <span class="h1andh2">
         <h1 class="headh1h2"><b>COURSES</b></h1>
         <h2 class="headh1h2"><b>NEET</b></h2>
-        <a class="button" id="button" href="" target="">
+        <a class="button" id="button" href="/contactus" target="">
 					<span></span>
 					<span></span>
 					<span></span>
