--- a/public/stylesheets/coursesJEE.css
+++ b/public/stylesheets/coursesJEE.css
@@ -1,8 +1,9 @@
-/* image*/
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');
+
 .coursesneet {
     width: 100%;
     height: 90vh;
-    background: url('../images/courses/neet.jpg') center/cover;
+    background: url('../images/courses/jee.jpg') center/cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
 
@@ -27,19 +28,7 @@
     color: black;
     font-size: 32px; 
 }
-.leftarrow{
-    padding: 2rem 4rem 0 4rem;
-    font-size: 10px;
-    height: 90px;
-    display: flex;
-    flex-direction: column;
-    bottom: 3rem;
-    left: 0rem;
-    position: fixed;
-}
-
 /*OVERVIEW*/
-
 .overview{
     height: 82vh;
     width: 100%;
@@ -56,7 +45,6 @@
     line-break: normal;
     line-height: 175%;
     padding: 2rem 4rem 1rem 2rem;
-
 }
 
 .overviewspan {
@@ -262,6 +250,7 @@
     /* margin-left: auto; */
     margin-right: auto;
 }
+
 .neetContent2 p {
     width: 80%;
     line-height: 2rem;
@@ -291,14 +280,14 @@
 }
 .bg1 {
 
-    background: url(../images/courses/img1.png) center/contain;
+    background: url(../images/courses/hexagon1.png) center/contain;
     
 }
 .bg2 {
-    background: url(../images/courses/img2.png) center/contain;
+    background: url(../images/courses/hexagon2.png) center/contain;
 }
 .bg3 {
-    background: url(../images/courses/img1.png) center/contain;
+    background: url(../images/courses/hexagon1.png) center/contain;
 }
 .hex1 {
     background-repeat: no-repeat;
@@ -311,8 +300,14 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
+    
 }
-
+p {
+    /* font-family: 'Montserrat', sans-serif !important; */
+    /* font-weight: 500; */
+    /* color: #242424; */
+    /* line-height: 2.5rem !important; */
+}
 .hex1 img {
     width: 29%;
 }
@@ -356,7 +351,7 @@
     font-size: 17px;
 
 }
-.neet1btn, .neet2btn, .neet3btn, .neet4btn {
+.neet1btn, .neet2btn, .neet3btn, .neet4btn , .neet5btn{
     padding:  0.5rem 2rem;
     border-radius: 20px;
     background-color: #526DF0;
@@ -365,21 +360,28 @@
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
     font-size: 20px;
 }
-.methodology1 , .methodology2, .methodology3{
+
+.neet1btn:hover, .neet2btn:hover, .neet3btn:hover, .neet4btn:hover , .neet5btn:hover {
+    color: #526DF0;
+    background-color: white;
+    cursor: pointer;
+}
+.methodology1 , .methodology2, .methodology3  , .methodology4{
    background-color: white;
-   width: 50%;
+   width: 50%; 
    padding: 3rem;
+   
    border-radius: 20px;
    position: relative;
 
 
 }
-.methodology1 h1 , .methodology2 h1 , .methodology3 h1 {
+.methodology1 h1 , .methodology2 h1 , .methodology3 h1 , .methodology4 h1 {
     text-align: center;
     padding-bottom: 2rem;
     
 }
-.methodology1 ul , .methodology2 ul ,.methodology3 ul {
+.methodology1 ul , .methodology2 ul ,.methodology3 ul , .methodology4 ul{
     line-height: 1.8rem;
     margin-left: auto;
     margin-right: auto;
@@ -390,19 +392,19 @@
     height: 14px;
     margin-right: .5rem;
 }
-.bgmeth , .bgmeth2 , .bgmeth3 {
+.bgmeth , .bgmeth2 , .bgmeth3  , .bgmeth4 {
     display: none;
     position: fixed;
     height: 100vh;
     width: 100vw;
-    /* background-color: rgba(0, 0, 0, 0.753); */
-    backdrop-filter: blur(30px);
+    background-color: rgba(0, 0, 0, 0.553);
+    backdrop-filter: blur(10px);
     z-index: 100;
     justify-content: center;
     align-items: center;
 }
 .enroll1:hover {
-    background-color: #2c2e2a;
+    background-color:#2c2e2a;
     color: rgb(255, 255, 255);
 }
 .enroll:hover {
@@ -581,17 +583,17 @@
 
     .bg1 {
 
-        background: url(../images/courses/vec1.png) center/contain;
+        background: url(../images/courses/hexagon1.png) center/contain;
         background-size: 100% 90%;
         background-repeat: no-repeat;
     }
     .bg2 {
-        background: url(../images/courses/Vector3.png) center/contain;
+        background: url(../images/courses/hexagon2.png) center/contain;
         background-repeat: no-repeat;
         background-size: 100% 90%;
     }
     .bg3 {
-        background: url(../images/courses/Vector5.png) center/contain;
+        background: url(../images/courses/hexagon1.png) center/contain;
         background-repeat: no-repeat;
         background-size: 100% 90%;
     }
@@ -607,6 +609,16 @@
 }
 
 @media (max-width:950px) {
+    .methodology1 , .methodology2, .methodology3{
+        background-color: white;
+        width: 70%;
+        padding: 3rem;
+        
+        border-radius: 20px;
+        position: relative;
+     
+     
+     }
     .hexTitle {
         font-size: 1.1rem;
     }
@@ -629,4 +641,96 @@
     .hex1 {
         height: 350px;
     }
+    .neet1btn, .neet2btn, .neet3btn, .neet4btn  , .neet5btn {
+        font-size: 13px;
+        padding: 0.5rem 1.6rem;
+    }
+    .hexBox {
+        margin-right: 0rem;
+    }
+    .hexBox2 {
+        
+        margin-left: 0rem !important;
+    }
+    .hexContent {
+        font-size: 14px;
+        line-height: 1.5rem;
+        
+    }
+    .hex1 img {
+        width: 40%;
+    }
+
 }
+
+@media (max-width:600px) {
+    .hex1 {
+        height: 300px;
+    }
+    .hex1 img { 
+        height: 70%;
+    }
+}
+
+@media (max-width:450px) {
+    .hex1 {
+        height: 225px;
+    }
+    .hexBox {
+        width: 58%;
+    }
+    .hex1 img {
+        height: 60%;
+    }
+    .hexTitle {
+        font-size: .8rem;
+    }
+    .neet1btn, .neet2btn, .neet3btn, .neet4btn , .neet5btn  {
+        font-size: 12px;
+        padding: 0.3rem 1rem;
+    }
+    .hexContent {
+        font-size: 13px;
+        line-height: 1.4rem;
+    }
+}
+@media (max-width:600px){
+    .methodology1 , .methodology2, .methodology3  , .methodology4{
+        background-color: white;
+        width: 80%; 
+        height: 450px;
+        padding: 1rem;
+        border-radius: 20px;
+        position: relative;
+        overflow: auto;
+
+     }
+     .methodology1 h1 , .methodology2 h1 , .methodology3 h1 , .methodology4 h1 {
+         text-align: center;
+         padding-bottom: 2rem;
+         
+     }
+     .methodology1 ul , .methodology2 ul ,.methodology3 ul , .methodology4 ul{
+         line-height: 1.8rem;
+         margin-left: auto;
+         margin-right: auto;
+         list-style: none;
+         font-size: 15px;
+         min-height: 100px;
+     }
+     .exit img {
+        width: 25px;
+        height: 25px;
+    }
+    .enroll {
+        padding: .5rem 1rem;
+        position: relative;
+        margin: .5rem .5rem;
+    }
+    .bg1:nth-child(1) {
+        margin-top: 2rem;
+    }
+
+}
+
+
