--- a/views/coursesJEE.ejs
+++ b/views/coursesJEE.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="stylesheets/coursesNEET.css" />
+    <link rel="stylesheet" href="stylesheets/coursesJEE.css" />
     <title>CoursesJEE</title>
   </head>
   <body>
@@ -143,7 +143,7 @@
       <span class="h1andh2">
         <h1 class="headh1h2"><b>COURSES</b></h1>
         <h2 class="headh1h2"><b>IIT-JEE</b></h2>
-        <a class="button" id="button" href="" target="">
+        <a class="button" id="button" href="/contactus" target="">
 					<span></span>
 					<span></span>
 					<span></span>
