--- a/views/coursesIIT&Medical.ejs
+++ b/views/coursesIIT&Medical.ejs
@@ -4,13 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="stylesheets/coursesIIT&Medical.css" />
+    <link rel="stylesheet" href="stylesheets/coursesNEET.css" />
     <title>CoursesIIT & Medical</title>
   </head>
   <body>
     <section class="bgmeth">
       <div class="methodology1">
         <span class="exit"><img src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"/></span>
+
+        <p class="methContent">
+          CLASSIC NEET ACADEMY offers a unique IIT/Medical Foundation program aimed at students of the 6th, 7th, 8th, 9th and 10th classes.
+This program focuses on strengthening the students conceptual clarity of the fundamentals in Mathematics, Physics, Chemistry, Biology, Logical Reasoning & Communication Skills.
+
+        </p>
         <h1>Objective & Course Methodology</h1>
         <ul>
           <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -61,7 +67,7 @@
         <img src="../images/courses/heximg1.png" alt="" />
         <div class="hexBox">
           <h1 class="hexTitle">STUDENTS</h1>
-          <p class="hexContent">
+          <p class="hexContent paraIIT">
             CLASSIC NEET ACADEMY offers a unique IIT/Medical Foundation program aimed at students of the 6th, 7th, 8th, 9th and 10th classes.
 This program focuses on strengthening the students conceptual clarity of the fundamentals in Mathematics, Physics, Chemistry, Biology, Logical Reasoning & Communication Skills.
 
@@ -126,6 +132,7 @@ This program focuses on strengthening the students conceptual clarity of the fun
     <a href="/contactus"><button class="enroll">Enroll Now!</button></a>
 
     <%- include('./layout/footer') %>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="javascripts/common.js"></script>
     <script src="javascripts/courses.js"></script>
     
