--- a/views/coursesJEE.ejs
+++ b/views/coursesJEE.ejs
@@ -4,13 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="stylesheets/coursesJEE.css" />
+    <link rel="stylesheet" href="stylesheets/coursesNEET.css" />
     <title>CoursesJEE</title>
   </head>
   <body>
     <section class="bgmeth">
       <div class="methodology1">
         <span class="exit"><img src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"/></span>
+        <p class="methContent"> This course is meant for students who have completed their 10th std board exams. The course will start at their 11th std and will be conducted till their JEE exam.
+          Course Methodology
+          </p>
         <h1>Course Methodology</h1>
         <ul>
           <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -52,6 +55,7 @@
     <section class="bgmeth2">
       <div class="methodology2">
         <span class="exit"><img src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"/></span>
+        <p class="methContent"> The course is specifically designed for those who wish to focus on JEE after completing their 11th class exams.</p>
         <h1>Course Methodology</h1>
         <ul>
           <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -93,6 +97,7 @@
     <section class="bgmeth3">
       <div class="methodology3">
         <span class="exit"><img src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"/></span>
+        <p class="methContent">This course is meant for those who are appearing for their 12th class board exams and wish to focus on JEE after the Board exams. These students will be attempting JEE the same year.</p>
         <h1>Course Methodology</h1>
         <ul>
           <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -160,7 +165,7 @@
         <img src="../images/courses/heximg11.png" alt="" />
         <div class="hexBox hexBox2">
           <h1 class="hexTitle">Two-year course</h1>
-          <p class="hexContent">
+          <p class="hexContent para1JEE">
             This course is meant for students who have completed their 10th std board exams. The course will start at their 11th std and will be conducted till their JEE exam.
 Course Methodology
 
@@ -174,7 +179,7 @@ Course Methodology
         <img src="../images/courses/heximg2.png" alt="" />
         <div class="hexBox">
           <h1 class="hexTitle">One-year course</h1>
-          <p class="hexContent">
+          <p class="hexContent para2JEE">
             The course is specifically designed for those who wish to focus on JEE after completing their 11th class exams.
           </p>
           <button class="neet2btn">Read more</button>
@@ -186,7 +191,7 @@ Course Methodology
         <img src="../images/courses/heximg3.png" alt="" />
         <div class="hexBox hexBox2">
           <h1 class="hexTitle">Crash course</h1>
-          <p class="hexContent">
+          <p class="hexContent para3JEE">
             This course is meant for those who are appearing for their 12th class board exams and wish to focus on JEE after the Board exams. These students will be attempting JEE the same year.
           </p>
           <button class="neet3btn">Read more</button>
