--- a/views/coursesNEET.ejs
+++ b/views/coursesNEET.ejs
@@ -11,6 +11,7 @@
     <section class="bgmeth">
       <div class="methodology1">
         <span class="exit"><img src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"/></span>
+        <p class="methContent">this course is meant for those who have completed their 12th class board exams and might have already attempted the NEET. They will appear for NEET in the coming year after one year of training focused on NEET.</p>
         <h1>Course Methodology</h1>
         <ul>
           <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -61,6 +62,7 @@
     <section class="bgmeth2">
       <div class="methodology2">
         <span class="exit"><img src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"/></span>
+        <p class="methContent">This course is meant for students who have completed their 10th std board exams. The course will start at their 11th std and will be conducted till their NEET exam. Course Methodology</p>
         <h1>Course Methodology</h1>
         <ul>
           <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -102,6 +104,7 @@
     <section class="bgmeth3">
       <div class="methodology3">
         <span class="exit"><img src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"/></span>
+        <p class="methContent">The course is specifically designed for those who wish to focus on NEET after completing their 11th class exams.</p>
         <h1>Course Methodology</h1>
         <ul>
           <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -143,6 +146,7 @@
     <section class="bgmeth4">
       <div class="methodology4">
         <span class="exit"><img src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"/></span>
+        <p class="methContent">This course is meant for those who are appearing for their 12th class board exams and wish to focus on NEET after the Board exams. These students will be attempting NEET the same year.</p>
         <h1>Course Methodology</h1>
         <ul>
           <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
