--- a/public/stylesheets/common.css
+++ b/public/stylesheets/common.css
@@ -125,45 +125,54 @@ ul {
   }
 }
 body {
-  overflow-x: hidden;
+  overflow-x: hidden ;
 }
+/* .body {
+  overflow-y: hidden;
+} */
 @media (max-width:1000px) {
-  .navlinks {
-    display: none;
-  }
+  /* nav {
+    overflow-x: hidden;
+  } */
   .hamburger {
     display: block;
     cursor: pointer;
   }
   .navlinks {
     position: absolute;
-    left: 100%;
+    display: flex;
+    overflow-x: hidden;
+    left: auto;
     height: 95vh;
     top: 10vh;
     background: white;
-    display: flex;
+    right: 0;
+    transform: translateX(100%);
     flex-direction: column;
     align-items: center;
     z-index: 30;
     width: 50%;
-    transition: left .5s ease-in;
+    transition: transform .5s ease-in;
     
   }
-  .body {
-    overflow-y: hidden;
+  .display-flex {
+    display: flex;
   }
+  
   
 
   
   .navlinks li {
     opacity: 0;
+
   }
   
 }
 
 .nav-active {
- left: 50% !important;
- transition: left .5s ease-in;
+ transform: translateX(0%);
+ transition: transform .5s ease-in;
+ 
 }
 
 footer {
