--- a/views/admin/aboutus/history.ejs
+++ b/views/admin/aboutus/history.ejs
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -17,26 +16,74 @@
     />
   </head>
   <body>
-    
+    <div class="previewdiv">
+      <div class="interior">
+        <form
+          action="/admin/courses/neet"
+          method="post"
+          class="d-flex justify-content-center align-items-center flex-column"
+          style="width: 100%"
+        >
+          <!-- <textarea
+            name="<%#  %>"
+            id="displaytextcont"
+            cols="40"
+            rows="20"
+            aria-valuetext="helloooooo"
+          > -->
+          <div class="form-floating">
+            <textarea class="form-control formtextarea" name="<%#  %>"  cols="60" style="height: 155px; resize: none;" maxlength="250" ></textarea>
+            <p class="spanp">Characters left &nbsp;<span class="changablespan"></span><span>/250</span></p>
+          </div>
+          <%=  %> 
+          <!-- </textarea> -->
+          <div>
+            <button type="button" class="btn btn-outline-secondary px-3 mt-5 me-5 closebtn">Close</button>
+            <button type="submit" class="btn btn-outline-primary mt-5">Submit</button>
+          </div>
+        </form>
+      </div>
+    </div>
     <%- include('../../layout/adminheader') %>
     <section class="mainsection">
       <div class="left"><%- include('../../layout/adminSidebar') %></div>
       <div class="right">
         <div class="preview">
-          <h1 class="mb-5">COURSE-NEET</h1>
+          <h1 class="mb-5">History</h1>
           <form
-            action="/admin/latestupdates"
+            action="/admin/aboutus/history"
             method="post"
             class="d-flex justify-content-center align-items-center flex-column"
             style="width: 100%"
           >
             <div class="input-group flex-nowrap" style="width: 80%">
               <span class="input-group-text" id="addon-wrapping">Content</span>
-              <textarea class="form-control formtextarea" name="<%#  %>"  cols="60" style="height: 155px; resize: none;" maxlength="250" >
-              
-              </textarea>
+              <textarea
+                class="form-control formtextarea"
+                name="content"
+                cols="60"
+                style="height: 90px; resize: none"
+                maxlength="250"
+              ></textarea>
             </div>
-            <p class="spanp d-flex">Characters left &nbsp;<span class="changablespan"></span><span>/250</span></p>
+            <p class="spanp d-flex">
+              Characters left &nbsp;<span class="changablespan"></span
+              ><span>/250</span>
+            </p>
+            <div class="input-group flex-nowrap" style="width: 80%">
+              <span class="input-group-text" id="addon-wrapping">Year</span>
+              <input
+                type="number"
+                name="year"
+                class="form-control yearnum"
+                aria-label="year"
+                aria-describedby="addon-wrapping"
+                id="uploadlink"
+                min="2000"
+                max="3000"
+                required
+              />
+            </div>
             <div>
               <button
                 type="button"
@@ -51,17 +98,17 @@
           </form>
         </div>
         <form
-          action="/admin/latestupdates?_method=DELETE"
+          action="/admin/aboutus/history?_method=DELETE"
           method="post"
           class="imgform latestupdateform"
         >
-          <h1 class="m-5">COURSE-NEET</h1>
+          <h1 class="m-5">History</h1>
 
           <table class="table" style="width: 70%">
             <thead>
               <tr>
-                <th scope="col">overview</th>
-                <th scope="col">methodology</th>
+                <th scope="col">content</th>
+                <th scope="col">year</th>
                 <th scope="col">Updates</th>
               </tr>
             </thead>
@@ -71,8 +118,9 @@
                 <td>
                   <input
                     type="text"
-                    id="overview"
-                    value="<%= i.overview %>"
+                    id="content"
+                    class="content"
+                    value="<%= i.content %>"
                     readonly
                     style="width: 80%; border: none"
                   />
@@ -80,8 +128,8 @@
                 <td>
                   <input
                     type="text"
-                    id="methodology"
-                    value="<%= i.methodology %>"
+                    id="year"
+                    value="<%= i.year %>"
                     readonly
                     style="width: 80%; border: none"
                   />
@@ -92,7 +140,7 @@
                     id="checkbox"
                     class="updatesCheckbox"
                     name="checkbox"
-                    value="<%= i.overview %>"
+                    value="<%= i.year %>"
                     style="height: 20px; width: 20px"
                   />
                 </td>
