--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -10,6 +10,16 @@ body{
 
 }
 
+.downarrow{
+	height: 3rem;
+	width: 3rem;
+	position: absolute;
+	right: 10%;
+	bottom: 10%;
+	cursor: pointer;
+	z-index: 15;
+}
+
 .sidebar a{
 	text-decoration: none;
 	
@@ -35,25 +45,29 @@ body{
 
 .right{
 	position: relative;
-	height: 90%;
+	height: fit-content;
 	width: 90%;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	flex-direction: column;
 	transition: all 0.5s ease ; 
-
+	overflow-y: scroll;
+	overflow-x: hidden;
 }
 
 .table{
 	border: 2px solid rgb(53, 49, 49);
 	border-radius: 2px;
 	width: 80%;
+	max-height: 30vh;
+	overflow-y: auto;
 }
 
 tbody{
-	height: 40vh;
-	overflow-y: auto;
+	min-height: 10vh;
+	max-height: 30vh !important;
+	overflow-y: scroll !important;
 }
 
 .currentSliderimgurl{
