--- a/views/admin/demovideos/Demovideos.ejs
+++ b/views/admin/demovideos/Demovideos.ejs
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin panel</title>
+    <!-- <link rel="stylesheet" href="alert/dist/sweetalert.css"> -->
+    <link rel="stylesheet" href="sweetalert2.min.css" />
     <link rel="stylesheet" href="../../stylesheets/admin.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -14,20 +16,21 @@
     />
   </head>
   <body>
+    <a href="#buttonid"><img class="downarrow" src="https://img.icons8.com/material-rounded/96/000000/low-importance.png"/></a>
     <%- include('../../layout/adminheader') %>
     <section class="mainsection">
       <div class="left"><%- include('../../layout/adminSidebar') %></div>
       <div class="right">
         <div class="preview">
-          <h1 class="mb-5">Demo Videos</h1>
+          <h1 class="mb-5">Demo Vedios</h1>
           <form
-            action="/admin/Demovideos"
+            action="/admin/demovideos"
             method="post"
             class="d-flex justify-content-center align-items-center flex-column"
-            style="width: 100%;"
+            style="width: 100%"
           >
             <div class="input-group flex-nowrap" style="width: 80%">
-              <span class="input-group-text" id="addon-wrapping">videolink</span>
+              <span class="input-group-text" id="addon-wrapping">Add News</span>
               <input
                 type="text"
                 name="uploadlink"
@@ -35,50 +38,37 @@
                 aria-label="Username"
                 aria-describedby="addon-wrapping"
                 id="uploadlink"
+                required
               />
             </div>
-            <div class="input-group flex-nowrap" style="width: 80%">
-                <span class="input-group-text" id="addon-wrapping">stream</span>
-                <input
-                  type="text"
-                  name="uploadlink"
-                  class="form-control"
-                  aria-label="Username"
-                  aria-describedby="addon-wrapping"
-                  id="uploadlink"
-                />
-              </div>
-              <div class="input-group flex-nowrap" style="width: 80%">
-                <span class="input-group-text" id="addon-wrapping">subject</span>
-                <input
-                  type="text"
-                  name="uploadlink"
-                  class="form-control"
-                  aria-label="Username"
-                  aria-describedby="addon-wrapping"
-                  id="uploadlink"
-                />
-              </div>
             <div>
-            <button type="button" class="btn btn-outline-secondary px-3 mt-5 me-5 backbtn">Back</button>
-            <button type="submit"  class="btn btn-outline-primary mt-5">submit</button>
+              <button
+                type="button"
+                class="btn btn-outline-secondary px-3 mt-5 me-5 backbtn"
+              >
+                Back
+              </button>
+              <button type="submit" class="btn btn-outline-primary mt-5">
+                submit
+              </button>
             </div>
           </form>
         </div>
         <form
-          action="/admin/Demovideos?_method=DELETE"
+          action="/admin/demovideos?_method=DELETE"
           method="post"
-          class="imgform"
+          class="imgform latestupdateform"
         >
-          <h1 class="m-5">Demovideos</h1>
+          <h1 class="m-5">Demo Vedios</h1>
+
           <table class="table" style="width: 70%">
             <thead>
               <tr>
-                <th scope="col" class="d-flex justify-content-center">Current Link</th>
+                <th scope="col">Current Link</th>
                 <th scope="col">Updates</th>
               </tr>
             </thead>
-            <tbody class="tbody">
+            <tbody>
               <% link.forEach(i => { %>
               <tr>
                 <td>
@@ -87,7 +77,7 @@
                     id="linkinput"
                     value="<%= i %>"
                     readonly
-                    style="width: 80%; border: none;"
+                    style="width: 80%; border: none"
                   />
                 </td>
                 <td>
@@ -97,20 +87,20 @@
                     class="updatesCheckbox"
                     name="checkbox"
                     value="<%= i %>"
-                    style="height: 20px; width: 20px;"
+                    style="height: 20px; width: 20px"
                   />
                 </td>
               </tr>
               <% }) %>
             </tbody>
           </table>
-          <div class="buttondiv">
+          <div class="buttondiv" id="buttonid">
             <button type="button" class="btn btn-outline-primary addbtn px-4">
               Add
             </button>
             <button
               type="button"
-              class="btn btn-outline-danger submit ms-5 px-3"
+              class="btn btn-outline-danger submit ms-5 px-3 submitbtn"
             >
               Delete
             </button>
@@ -118,7 +108,10 @@
         </form>
       </div>
     </section>
-    <script src="../../javascripts/admin/home/Demovideos.js"></script>
+    <!-- <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script> -->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/5.5.2/bootbox.js" integrity="sha512-K3MtzSFJk6kgiFxCXXQKH6BbyBrTkTDf7E6kFh3xBZ2QNMtb6cU/RstENgQkdSLkAZeH/zAtzkxJOTTd8BqpHQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
+    <script src="../../javascripts/admin/home/LatestUpdates.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
