--- a/views/admin/home/latestUpdates.ejs
+++ b/views/admin/home/latestUpdates.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin panel</title>
     <!-- <link rel="stylesheet" href="alert/dist/sweetalert.css"> -->
-    <link rel="stylesheet" href="sweetalert2.min.css">
+    <link rel="stylesheet" href="sweetalert2.min.css" />
     <link rel="stylesheet" href="../../stylesheets/admin.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -26,7 +26,7 @@
             action="/admin/latestupdates"
             method="post"
             class="d-flex justify-content-center align-items-center flex-column"
-            style="width: 100%;"
+            style="width: 100%"
           >
             <div class="input-group flex-nowrap" style="width: 80%">
               <span class="input-group-text" id="addon-wrapping">Add News</span>
@@ -41,8 +41,15 @@
               />
             </div>
             <div>
-            <button type="button" class="btn btn-outline-secondary px-3 mt-5 me-5 backbtn">Back</button>
-            <button type="submit" class="btn btn-outline-primary mt-5">submit</button>
+              <button
+                type="button"
+                class="btn btn-outline-secondary px-3 mt-5 me-5 backbtn"
+              >
+                Back
+              </button>
+              <button type="submit" class="btn btn-outline-primary mt-5">
+                submit
+              </button>
             </div>
           </form>
         </div>
@@ -69,19 +76,17 @@
                     id="linkinput"
                     value="<%= i %>"
                     readonly
-                    style="width: 80%; border: none;"
-
+                    style="width: 80%; border: none"
                   />
                 </td>
                 <td>
                   <input
                     type="checkbox"
                     id="checkbox"
-                    class="updatesCheckbox "
+                    class="updatesCheckbox"
                     name="checkbox"
                     value="<%= i %>"
-                    style="height: 20px; width: 20px; "
-                    
+                    style="height: 20px; width: 20px"
                   />
                 </td>
               </tr>
@@ -89,7 +94,7 @@
             </tbody>
           </table>
           <div class="buttondiv">
-            <button type="button" class="btn btn-outline-primary addbtn px-4" >
+            <button type="button" class="btn btn-outline-primary addbtn px-4">
               Add
             </button>
             <button
