--- a/views/results.ejs
+++ b/views/results.ejs
@@ -45,10 +45,68 @@
               <p data-score="<%= student.score %>" class="scoreStudent"><%= student.score %></p></span
             >
           </div> -->
-          <div class="refbox" data-name="<%= student.name %>" data-score="<%= student.score %>"></div>
+          <div class="refbox" data-name="<%= student.name %>" data-score="<%= student.score %>" data-img="<%= student.studentimg %>"></div>
           <%  }) %>
           <div class="griditem1 gridbox">
+            <img class="imgTopper" src="" />
+            <span class="griditem1span"
+              ><h3 class="nameStudent"></h3>
+              <p class="scoreStudent"></p></span
+            >
+          </div>
+          <div class="griditem1 gridbox">
+            <img class="imgTopper" src="" />
+            <span class="griditem1span"
+              ><h3 class="nameStudent"></h3>
+              <p class="scoreStudent"></p></span
+            >
+          </div>
+          <div class="griditem1 gridbox">
+            <img class="imgTopper" src="" />
+            <span class="griditem1span"
+              ><h3 class="nameStudent"></h3>
+              <p class="scoreStudent"></p></span
+            >
+          </div>
+          <div class="griditem1 gridbox">
             
+            <img class="imgTopper" src="" />
+            
+            <span class="griditem1span"
+              ><h3 class="nameStudent"></h3>
+              <p class="scoreStudent"></p></span
+            >
+          </div>
+          <div class="griditem1 gridbox">
+            <img class="imgTopper" src="" />
+            <span class="griditem1span"
+              ><h3 class="nameStudent"></h3>
+              <p class="scoreStudent"></p></span
+            >
+          </div>
+          <div class="griditem1 gridbox">
+            <img class="imgTopper" src="" />
+            <span class="griditem1span"
+              ><h3 class="nameStudent"></h3>
+              <p class="scoreStudent"></p></span
+            >
+          </div>
+          <div class="griditem1 gridbox">
+            <img class="imgTopper" src="" />
+            <span class="griditem1span"
+              ><h3 class="nameStudent"></h3>
+              <p class="scoreStudent"></p></span
+            >
+          </div>
+          <div class="griditem1 gridbox">
+            <img class="imgTopper" src="" />
+            <span class="griditem1span"
+              ><h3 class="nameStudent"></h3>
+              <p class="scoreStudent"></p></span
+            >
+          </div>
+          <div class="griditem1 gridbox">
+            <img class="imgTopper" src="" />
             <span class="griditem1span"
               ><h3 class="nameStudent"></h3>
               <p class="scoreStudent"></p></span
