--- a/public/stylesheets/sliderrevolution.css
+++ b/public/stylesheets/sliderrevolution.css
@@ -70,36 +70,35 @@ body{
 }
 
 .preview{
-	position: absolute;
-	height: 80vh;
-	width: 80%;
+	position: fixed;
+	height: 100vh;
+	width: 100%;
 	left: 50%;
 	top: 50%;
 	transform: translate(-50%,-41%);
 	display: none;
 	z-index: 5;
+	justify-content: center;
+	align-items: center;
 }
 
 .preview img{
 	justify-content: center;
 	align-items: center;
-	height: 90%;
-	width: 90%;
-
+	height: 60%;
+	width: 60%;
 }
 
 .closesvg{
 	position: absolute;
-	right: 0%;
-	top: 0%;
 	cursor: pointer;
+	right: 14%;
+	top: 14%;
 }
 
 /* Latest Updates */
 
-.addbtn{
 
-}
 
 .buttondiv{
 	display: flex;
