--- a/views/admin/home/calendarEvents.ejs
+++ b/views/admin/home/calendarEvents.ejs
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Admin</title>
-		<link
-		  href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-		  rel="stylesheet"
-		  integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-		  crossorigin="anonymous"
-		/>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Admin</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="../../stylesheets/admin.css" />
-    <link rel="stylesheet" href="sweetalert2.min.css">
-	</head>
-	<body>
-		<%- include('../../layout/adminheader') %>
+    <link rel="stylesheet" href="sweetalert2.min.css" />
+  </head>
+  <body>
+    <%- include('../../layout/adminheader') %>
     <section class="mainsection">
       <div class="left"><%- include('../../layout/adminSidebar') %></div>
       <div class="right">
@@ -25,10 +25,12 @@
             action="/admin/calendarevents"
             method="post"
             class="d-flex justify-content-center align-items-center flex-column"
-            style="width: 100%;"
+            style="width: 100%"
           >
             <div class="input-group flex-nowrap" style="width: 80%">
-              <span class="input-group-text" id="addon-wrapping">Add Event</span>
+              <span class="input-group-text" id="addon-wrapping"
+                >Add Event</span
+              >
               <input
                 type="text"
                 name="event"
@@ -36,7 +38,7 @@
                 aria-label="Username"
                 aria-describedby="addon-wrapping"
                 id="uploadlink"
-				required
+                required
               />
             </div>
             <div class="input-group flex-nowrap mt-4" style="width: 80%">
@@ -48,12 +50,19 @@
                 aria-label="Username"
                 aria-describedby="addon-wrapping"
                 id="uploadlink"
-				required
+                required
               />
             </div>
             <div>
-            <button type="button" class="btn btn-outline-secondary px-3 mt-5 me-5 backbtn">Back</button>
-            <button type="submit" class="btn btn-outline-primary mt-5">submit</button>
+              <button
+                type="button"
+                class="btn btn-outline-secondary px-3 mt-5 me-5 backbtn"
+              >
+                Back
+              </button>
+              <button type="submit" class="btn btn-outline-primary mt-5">
+                submit
+              </button>
             </div>
           </form>
         </div>
@@ -63,7 +72,6 @@
           class="imgform"
         >
           <h1 class="m-5">Calendar Events</h1>
-
           <table class="table" style="width: 70%">
             <thead>
               <tr>
@@ -81,8 +89,7 @@
                     id="linkinput"
                     value="<%= i.date %>"
                     readonly
-                    style="width: 80%; border: none;"
-
+                    style="width: 80%; border: none"
                   />
                 </td>
                 <td>
@@ -91,8 +98,7 @@
                     id="linkinput"
                     value="<%= i.month %>"
                     readonly
-                    style="width: 80%; border: none;"
-
+                    style="width: 80%; border: none"
                   />
                 </td>
                 <td>
@@ -101,19 +107,17 @@
                     id="linkinput"
                     value="<%= i.event %>"
                     readonly
-                    style="width: 80%; border: none;"
-
+                    style="width: 80%; border: none"
                   />
                 </td>
                 <td>
                   <input
                     type="checkbox"
                     id="checkbox"
-                    class="updatesCheckbox "
+                    class="updatesCheckbox"
                     name="checkbox"
                     value="<%= i.event %>"
-                    style="height: 20px; width: 20px; "
-                    
+                    style="height: 20px; width: 20px"
                   />
                 </td>
               </tr>
@@ -121,12 +125,12 @@
             </tbody>
           </table>
           <div class="buttondiv">
-            <button type="button" class="btn btn-outline-primary addbtn px-4" >
+            <button type="button" class="btn btn-outline-primary addbtn px-4">
               Add
             </button>
             <button
               type="submit"
-              class="btn btn-outline-danger submit ms-5 px-3 submitbtn" 
+              class="btn btn-outline-danger submit ms-5 px-3 submitbtn"
             >
               Delete
             </button>
@@ -141,5 +145,5 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-	</body>
+  </body>
 </html>
