--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,13 +23,14 @@
 		/>
     
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+	<link rel="stylesheet" href="stylesheets/chatbot.css">
 		<title>ClassicNeetAcademy</title>
 	</head>
 
 	<body>
 		<div class="backgroundMain">
 			<%- include('./layout/header') %>
-
+<%- include('./chatbot') %> 
 			<svg
 				xmlns="http://www.w3.org/2000/svg"
 				class="uparrow"
@@ -430,5 +431,6 @@
 		<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 		<!-- <script src="javascripts/index.js"></script> -->
 		<script src="javascripts/common.js"></script>
+		<script src="javascripts/chatbot.js"></script>
 	</body>
 </html>
