--- a/views/successStories2.ejs
+++ b/views/successStories2.ejs
@@ -14,10 +14,11 @@
     <section class="secMain">
       <img class="vector" src="../images/successStories/Vector8.png" alt="" />
       <div class="cardMain">
+      <% students.forEach((student) => { %>
         <div class="card">
           <img
             class="profile"
-            src="../images/successStories/success_img_1.png"
+            src="<%= student.studentimg %>"
             alt=""
           />
           <h3>PRIYA</h3>
@@ -25,13 +26,14 @@
             class="video"
             width="560"
             height="315"
-            src="https://www.youtube.com/embed/OUQ1FXrOJKA"
+            src="<%= student.youtubelink %>"
             title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
           ></iframe>
         </div>
+      <% }) %>
         <div class="card">
           <img
             class="profile"
@@ -72,44 +74,6 @@
         <div class="card">
           <img
             class="profile"
-            src="../images/successStories/success_img_4.png"
-            alt=""
-          />
-          <h3>PRIYA</h3>
-          <iframe 
-          class="video"
-
-            width="560"
-            height="315"
-            src="https://www.youtube.com/embed/OUQ1FXrOJKA"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-          ></iframe>
-        </div>
-        <div class="card">
-          <img
-            class="profile"
-            src="../images/successStories/success_img_5.png"
-            alt=""
-          />
-          <h3>PRIYA</h3>
-          <iframe 
-          class="video"
-
-            width="560"
-            height="315"
-            src="https://www.youtube.com/embed/OUQ1FXrOJKA"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-          ></iframe>
-        </div>
-        <div class="card">
-          <img
-            class="profile"
             src="../images/successStories/success_img_3.png"
             alt=""
           />
@@ -126,6 +90,7 @@
             allowfullscreen
           ></iframe>
         </div>
+        
       </div>
       
       <!-- <img class="vector" src="../images/successStories/Vector 9.png" alt="" /> -->
