--- a/views/admin/courses/empty.ejs
+++ b/views/admin/courses/empty.ejs
@@ -7,9 +7,8 @@
     <title>Input content</title>
 </head>
 <body>
-    <form action="/admin/courses/neet">
-        <textarea name="overview" id="" cols="30" rows="10"></textarea>
-        <textarea name="methodology" id="" cols="30" rows="10"></textarea>
+    <form action="/example">
+        <input type="file">
         <button type="submit">Submit</button>
     </form>
 </body>
