--- a/views/admin/courses/empty.ejs
+++ b/views/admin/courses/empty.ejs
@@ -7,9 +7,11 @@
     <title>Input content</title>
 </head>
 <body>
+    <div class="forimg"></div>
     <form action="/example" method="post">
-        <input type="file" name="myImage" accept="image/x-png,image/gif,image/jpeg" />
+        <input type="file" name="myImage" class="myImage" accept="image/x-png,image/gif,image/jpeg" />
         <button type="submit">Submit</button>
     </form>
+    <script src="../../javascripts/admin/example.js"></script>
 </body>
 </html>
