--- a/views/admin/home/sliderRevolution.ejs
+++ b/views/admin/home/sliderRevolution.ejs
@@ -43,7 +43,7 @@
             <thead>
               <tr>
                 <th scope="col">Current Image</th>
-                <th scope="col">New Image</th>
+                <th scope="col">New Image(1920 X 1080)</th>
                 <th scope="col">Updates</th>
               </tr>
             </thead>
