--- a/views/admin/home/calendarEvents.ejs
+++ b/views/admin/home/calendarEvents.ejs
@@ -41,6 +41,12 @@
                 required
               />
             </div>
+            <div class="d-flex justify-content-end" style="width: 80%">
+              <p class="spanp">
+                Characters left &nbsp;<span class="changablespan"></span
+                ><span>/250</span>
+              </p>
+            </div>
             <div class="input-group flex-nowrap mt-4" style="width: 80%">
               <span class="input-group-text" id="addon-wrapping">Add Date</span>
               <input
@@ -50,6 +56,8 @@
                 aria-label="Username"
                 aria-describedby="addon-wrapping"
                 id="uploadlink"
+                minlength="10"
+                maxlength="150"
                 required
               />
             </div>
