--- a/views/admin/home/calendarEvents.ejs
+++ b/views/admin/home/calendarEvents.ejs
@@ -34,17 +34,19 @@
               <input
                 type="text"
                 name="event"
-                class="form-control"
+                class="form-control inputtext"
                 aria-label="Username"
                 aria-describedby="addon-wrapping"
                 id="uploadlink"
+                minlength="10"
+                maxlength="150"
                 required
               />
             </div>
             <div class="d-flex justify-content-end" style="width: 80%">
               <p class="spanp">
                 Characters left &nbsp;<span class="changablespan"></span
-                ><span>/250</span>
+                ><span>/150</span>
               </p>
             </div>
             <div class="input-group flex-nowrap mt-4" style="width: 80%">
