--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -240,6 +240,13 @@
           ><img src="images/aboutus/download.jpg"
         /></a>
       </div>
+      <!-- <div class="apppage1">
+        <img src="images/aboutus/phonebg.png" class="Messaging" />
+        <a
+          href="https://play.google.com/store/apps/details?id=com.sixerclass.classicneet&hl=en_IN&gl=US"
+          ><img src="images/aboutus/download.jpg"
+        /></a>
+      </div> -->
     </section>
     <script src="javascripts/common.js"></script>
     <script src="javascripts/aboutus.js"></script>
