--- a/views/layout/adminSideBar.ejs
+++ b/views/layout/adminSideBar.ejs
@@ -43,7 +43,7 @@
         </button>
         <div class="collapse" id="demo-collapse">
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 ms-4 d-flex flex-column justify-content-center fs-6 mt-2 ms-4 small">
-            <li><a href="#" class="link-dark rounded ahover">Videos</a></li>
+            <li><a href="/admin/demovideos" class="link-dark rounded ahover">Videos</a></li>
           </ul>
         </div>
       </li>
