--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -1164,6 +1164,9 @@ p {
   font-weight: 700;
   color: white;
 }
+.bottom-drive a:hover{
+  color:yellow ;
+}
 .drive {
   display: flex;
   justify-content: center;
@@ -1289,7 +1292,7 @@ p {
   right: 8% !important;
   transform: scale(1.5);
   
-  font-weight: 1000 !important;
+  font-weight: bolder;
   /* background: #02c3d8; */
 }
 .arrowprev1 {
@@ -1298,14 +1301,14 @@ p {
   top: 59%;
   left: 8% !important;
   transform: scale(1.5);
-  font-weight: 1000 !important;
+  font-weight: bolder;
 }
 .arrownext2 {
   color: #02c3d8;
   position: absolute;
   top: 84%;
   right: 3% !important;
-  font-weight: 1000 !important;
+  font-weight: bolder;
 }
 .arrowprev2 {
   color: #02c3d8;
@@ -1313,7 +1316,7 @@ p {
   top: 84%;
   /* transform: translateY(-50%); */
   left: 3% !important;
-  font-weight: 1000 !important;
+  font-weight: bolder;
 }
 
 .mySwiper2 {
