--- a/views/home.ejs
+++ b/views/home.ejs
@@ -311,7 +311,7 @@
 		
 		<!-- <img src="images/home/Vector.svg" alt="SVG" /> -->
 		<div class="neet-2020-toppers-a">
-			<a href="/">Our Results - Neet 2020 Toppers</a>
+			<p>Our Results - Neet 2020 Toppers</p>
 			<img src="https://img.icons8.com/plumpy/50/000000/sparkling--v2.png" style="height: 30px; width: 30px;"/>
 		</div>
 		
