--- a/views/chatbot.ejs
+++ b/views/chatbot.ejs
@@ -3,7 +3,7 @@
 	<div class="chat-nav">
 		<img src="../images/chatbot/chatbot.png" alt="" />
 		<h1>Classic NEET Academy <br /><span>Automated Chat</span></h1>
-		<img src="../images/chatbot/chatbot_reset.png" alt="">
-		<img src="../images/chatbot/close.png" alt="">
+		<img src="../images/chatbot/chatbot_reset.png" alt="" />
+		<img src="../images/chatbot/chatbot_close.png" alt="" class="chat_close" />
 	</div>
 </div>
