--- a/views/contactus.ejs
+++ b/views/contactus.ejs
@@ -72,7 +72,8 @@
 							<label for="name">Name</label>
 							<input
 								type="text"
-																class="form-input name-input"
+								name="name"								
+								class="form-input name-input"
 								id="name"
 								
 							/>
